bodyfsm chart changed

--- a/upenn_team_description2014.tex
+++ b/upenn_team_description2014.tex
@@ -417,7 +417,7 @@ A vision simulator is designed to open and run image processing on these log fil
 		
 	\begin{figure}[H]
 		\centering
-		\includegraphics[width=\textwidth]{figures/BodyFSM.eps}
+		\includegraphics[width=\textwidth]{figures/NewBodyFSM.eps}
 		\caption{Body State Machine for a non-goalie player.}
 		\label{fig:bodyfsm}
 	\end{figure}
